code25_all/scala/16037551.txt
scala> case class T3( x:Int,y:Int,z:Int) { def foreach[U](f:((Int,Int,Int)) => U) = f( (x,y,z) ) }
defined class T3

scala> for ( (x,y,z) <- T3(1,2,3) ) { println (x,y,z) }
<console>:10: error: value filter is not a member of T3
              for ( (x,y,z) <- T3(1,2,3) ) { println (x,y,z) }
                                 ^

scala> case class T3( x:Int,y:Int,z:Int) { def foreach[U](f:((Int,Int,Int)) => U) = f( (x,y,z) )
     | def filter(p: ((Int,Int,Int)) => Boolean) = this }
defined class T3

scala> for ( (x,y,z) <- T3(1,2,3) ) { println (x,y,z) }
(1,2,3)

scala> 

